    presence of reporting delays (Salmon et al., 2015):
    \code{bodaDelay()}, \code{sts_observation()}, and \code{sts_creation()}.
  
    \item New argument \code{by} for \code{plot.epidataCS()}, which
    defines a stratifying variable for the events (default is the event
    type as before). It can also be set to \code{NULL} to make the plot
    not distinguish between event types.
    
    \item New argument \code{tiles} for the spatial plot of \code{"epidataCS"}.
    
    \item New function \code{permute.epidataCS()} to randomly permute
    time points or locations of the events (holding other marks fixed).

    \item The new function \code{knox()} implements the Knox test for
    space-time interaction. It supports both the Poisson approximation
    and a Monte Carlo permutation approach to determine the p-value.

    \item New function \code{epitest()}: a permutation test for
    space-time interaction in epidemic \code{twinstim} models.
    It makes use of the new auxiliary function \code{simpleR0()}.

    \item New function \code{plapply()}: a parallel and verbose version
    of \code{lapply()} wrapping around both \code{mclapply()} and
    \code{parLapply()} of package \pkg{parallel}.

    \item New S3-generic \code{coeflist()} to list model coefficients by
    component. It currently has a default method and one for
    \code{"twinstim"} and \code{"simEpidataCS"}.

    \item New argument \code{newcoef} for \code{simulate.twinstim()} to
    customize the model parameters used for the simulation.

    \item New auxiliary function \code{layout.scalebar} for use as part
    of \code{sp.layout} in \code{spplot()}.
  }
}

\subsection{MINOR CHANGES}{
  \itemize{
    \item Initial data processing in \code{twinstim()} is faster
    since event sources are only re-determined if there is effective
    need for an update (due to subsetting or a change of
    \code{qmatrix}).

    \item \code{formatPval()} disables \code{scientific} notation by default.
