@@ -12,6 +12,8 @@ The \code{plot} method for class \code{"epidataCS"} either plots the
 number of events along the time axis (\code{epidataCSplot_time}) as a
 \code{hist()}, or the locations of the events in the observation region
 \code{W} (\code{epidataCSplot_space}).
+The spatial plot can be enriched with tile-specific color levels to
+indicate attributes such as the population (using \code{\link{spplot}}).
 }
 
 \usage{
@@ -25,9 +27,10 @@ epidataCSplot_time(x, subset, by = type,
                    panel.first = abline(h=axTicks(2), lty=2, col="grey"),
                    legend.types = list(), ...)
 
-epidataCSplot_space(x, subset, by = type, tiles = x$W,
+epidataCSplot_space(x, subset, by = type, tiles = x$W, pop = NULL,
                     cex.fun = sqrt, points.args = list(), add = FALSE,
-                    legend.types = list(), legend.counts = list(), ...)
+                    legend.types = list(), legend.counts = list(),
+                    sp.layout = NULL, ...)
 }
 
 \arguments{
@@ -96,7 +99,9 @@ epidataCSplot_space(x, subset, by = type, tiles = x$W,
     the axis range), \code{lwd}, \code{col}, and \code{offset} (a
     numeric vector of length the number of types).}
   \item{add}{logical (default: \code{FALSE}) indicating if the plot
-    should be added to an existing window.}
+    should be added to an existing window.
+    Ignored if an \code{\link{spplot}} is created (if \code{pop} is
+    non-\code{NULL}).}
   \item{mar}{see \code{\link{par}}. The default (\code{NULL}) is
     \code{mar <- par("mar")}, with \code{mar[4] <- mar[2]} if an
     axis is requested for the \code{cumulative} numbers.}
@@ -113,6 +118,13 @@ epidataCSplot_space(x, subset, by = type, tiles = x$W,
   \item{tiles}{the observation region \code{x$W} (default) or,
     alternatively, a \code{"\linkS4class{SpatialPolygons}"}
     representation of the tiles of \code{x$stgrid}.}
+  \item{pop}{if \code{tiles} is a
+    \code{"\linkS4class{SpatialPolygonsDataFrame}"}, \code{pop} can
+    specify an attribute to be displayed in a levelplot behind the
+    point pattern, see \code{\link{spplot}}. By default (\code{NULL}),
+    the conventional graphics system is used to display the \code{tiles}
+    and event locations, otherwise the result is a
+    \code{\link{trellis.object}}.}
   \item{cex.fun}{function which takes a vector of counts of events
     at each unique location and returns a (vector of) \code{cex}
     value(s) for the sizes of the corresponding \code{points}.
@@ -130,13 +142,16 @@ epidataCSplot_space(x, subset, by = type, tiles = x$W,
     \code{cex.fun} is added to the plot. This list may contain a
     special element \code{counts}, which is an integer vector
     specifying the counts to illustrate.}
+  \item{sp.layout}{optional list of additional layout items in case
+    \code{pop} is non-\code{NULL}, see \code{\link{spplot}}.}
 }
 
 \value{
 For \code{aggregate="time"} (i.e., \code{epidataCSplot_time}) the data
 of the histogram (as returned by \code{\link{hist}}),
 and for \code{aggregate="space"} (i.e., \code{epidataCSplot_space})
-\code{NULL}, invisibly.
+\code{NULL}, invisibly, or the \code{\link{trellis.object}} generated by
+\code{\link{spplot}} (if \code{pop} is non-\code{NULL}).
 }
 
 \author{
@@ -155,7 +170,24 @@ plot(imdepi, "time", main = "Histogram of event time points")
 plot(imdepi, "time", by = NULL, main = "Aggregated over both event types")
 
 ## show the distribution in space
-plot(imdepi, "space", lwd=2)
+plot(imdepi, "space", lwd = 2, col = "lavender")
+
+## with the district-specific population density in the background,
+## a scale bar, and customized point style
+load(system.file("shapes", "districtsD.RData", package = "surveillance"))
+districtsD$log10pop <- log10(districtsD$POPULATION)
+keylabels <- c(1,2,5) * rep(10^(4:6), each=3)
+plot(imdepi, "space", tiles = districtsD, pop = "log10pop",
+     ## modify point style for better visibility on gray background
+     points.args = list(pch = 19, col = c("orangered", "darkblue")),
+     ## metric scale bar due to projected coordinates, see proj4string(imdepi$W)
+     sp.layout = layout.scalebar(imdepi$W, scale=100, labels=c("0", "100 km")),
+     ## gray background levels for the district population
+     col.regions = gray.colors(100, start=0.9, end=0.1),
+     ## color key is equidistant on log10(population) scale
+     at = seq(4.5, 6.6, by = 0.05),
+     colorkey = list(labels=list(at=log10(keylabels), labels=keylabels/1000)))
+grid::grid.text("District population [1000 inhabitants]", x=0.95, rot=90)
 }
 
 \keyword{hplot}
